--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <h1>JSON &rarr; Objective-C Dictionary Literal</h1>
     <textarea class="raw_json" placeholder="Paste JSON in here and hit &lt;enter&gt;"></textarea>
     <textarea class="output" placeholder="If JSON is valid, Objective-C dictionary literal will appear here"></textarea>
+    <p>
+    <strong>Source:</strong> <a href="https://github.com/otanistudio/jsodict">https://github.com/otanistudio/jsodict</a>
+    </p>
 </div>
+
+
 <script src="js/Dictionary.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
 </body>
